<resources>
    <string name="app_name">iNVENTORY iRECORD</string>
    <string name="action_settings">Settings</string>
    <string name="button_symbol">+</string>
    <string name="view_edit_inventory">View/Edit Inventory</string>
    <string name="edit_item_details">Edit Item Details</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="save">Save</string>
    <string name="save_icon">Save Icon</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="cancel">Cancel</string>
    <string name="file_error">Error deleting temp file.</string>
    <string name="saved_message">Image Saved</string>
    <string name="name">Name:</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="value">Value:</string>
    <string name="type">Type:</string>
    <string name="date_of_purchase">Date of Purchase:</string>
    <string name="price_paid">Price Paid:</string>
    <string name="bought_new">Bought New:</string>
    <string name="notes">Notes:</string>
    <string name="delete_item">Delete Item</string>
    <string name="date_manufactured">Date Manufactured:</string>
    <string name="number_of_item_stored">Number of Item Stored: %1$d</string>
    <string name="total_value_of_item">Total Value of Item: $ %1$.2f </string>
    <string name="numbers_of_receipts">Numbers of Receipts: %1$d</string>
    <string name="number_of_pictures">Number of Pictures: %1$d</string>
    <string name="view_photos">View/Edit Photos</string>
    <string name="button_to_add_image">Button to add Image.</string>
    <string name="button_to_view_photos">Button to View photos</string>
    <string name="find_a_photo_to_add">Add item photo</string>
    <string name="photos">Photos</string>
    <string name="add_receipt_photo">Add Receipt Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="receipt_photos">Receipt Photos</string>
    <string name="item_photos">Item Photos</string>
    <string name="selected_picture_from_gallery">Selected Picture from Gallery</string>

    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="dummy_content">An Error Occurred While Loading The Image</string>
</resources>
