<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ViewSingleItemDetailsActivity"
        android:background="@drawable/background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/add_single_item_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/add_receipt_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_action_add"
                    android:gravity="left|center_vertical"
                    android:text="Add Receipt Photo" />

                <Button
                    android:id="@+id/add_object_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_action_add"
                    android:gravity="left|center_vertical"
                    android:text="Add Object Photo"  />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/add_single_item_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/type"/>
                    <TextView
                        android:id="@+id/add_single_item_type_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/make"/>
                    <TextView
                        android:id="@+id/add_single_item_make_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/model"/>
                    <TextView
                        android:id="@+id/add_single_item_model_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/value"/>
                    <TextView
                        android:id="@+id/add_single_item_value_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/price_paid"/>
                    <TextView
                        android:id="@+id/add_single_item_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/bought_new"/>
                    <TextView
                        android:id="@+id/add_single_item_new_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/serial_number"/>
                    <TextView
                        android:id="@+id/add_single_item_serial_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/date_of_purchase"/>
                    <TextView
                        android:id="@+id/add_single_item_date_purch_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/date_manufactured"/>
                    <TextView
                        android:id="@+id/add_single_item_date_manu_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginStart="12dp"
                        android:textSize="24sp"
                        android:text="@string/notes"/>
                    <TextView
                        android:id="@+id/add_single_item_notes_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/add_edit_add_item_fragment"
                android:name="com.example.inventoryirecord.EditAddItemFragment"/>
            <!--            <include layout="@layout/form_edit_item_layout" />-->
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/add_edit_delete_buttons_layout"
                android:visibility="visible">
                <LinearLayout
                    android:id="@+id/edit_single_item_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:background="@drawable/border"
                    android:backgroundTint="#834EBB75"
                    android:layout_margin="15dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_mode_edit_black_24dp"
                        android:contentDescription="@string/edit_icon"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:textSize="24sp"
                        android:text="@string/edit_item_details" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_delete_single_item_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:background="@drawable/border"
                    android:backgroundTint="#F44336"
                    android:layout_margin="15dp"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_delete_black_24dp"
                        android:contentDescription="@string/edit_icon"
                        android:padding="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:textSize="24sp"
                        android:text="@string/delete_item" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/form_save_cancel_buttons" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>